# pythonck

./: .gitignore  DOCUMENTATION_PLAN.md  LICENSE  MANIFEST.in  PACKAGE_USAGE.md  PYODIDE_USAGE.md  README.md  __init__.py  adaptor_transformation_app.py  app.py  ck_tile_tutorial_index.md  conftest.py  coordinate_movement_tile_demo.py  debug_apps.sh  deploy_apps.sh  examples.py  explain_a_lds_index_swapping_equiv.py  gpu_hierarchy_visualizer.py  indexing_explanation.md  nginx-fixed.conf  nginx.conf  parser.py  pyproject.toml  pythonck-apps.service  release.sh  requirements.txt  setup.py  spans_app.py  stop_apps.sh  tensor_transform_analyzer.py  tensor_transform_app.py  tensor_transform_examples.py  tensor_transform_parser.py  tensor_visualization_app.py  test_debug_encoding.py  test_docs.sh  test_tile_window_ys_to_d.py  test_tiler_pedantic.py  test_update_simple.py  test_visualization.py  (+6 more)
.github/workflows/: quarto-publish.yml
animation/: convolution_tensor_descriptor_animation.py  rms_norm_encoding_animation.py  space_filling_curve_animation.py  tile_embedding_animation.py  tile_reduction_animation.py
documentation/: _quarto.yml  compact_diagram_test.html  cpp-only-enhancement.css  diagram-sizing-fixes.css  fixed_diagrams_test.html  global-font-override.css  index.qmd  pythonck-0.1.0-py3-none-any.whl  pythonck-0.2.0-py3-none-any.whl
documentation/_site/: index.html  pythonck-0.1.0-py3-none-any.whl  search.json  test-simple.html
documentation/api/: index.qmd
documentation/concepts/: 00_motivation.qmd  01_buffer_view.qmd  01_tensor_view.qmd  02_adaptors.qmd  02_descriptors.qmd  (+28 more)
pytensor/: IMPLEMENTATION_STATUS.md  README.md  __init__.py  buffer_view.py  example_usage.py  functional_utils.py  partition_simulation.py  sequence_utils.py  shuffle_tile.py  space_filling_curve.py  static_distributed_tensor.py  static_encoding_pattern.py  store_tile.py  sweep_tile.py  tensor_adaptor.py  tensor_coordinate.py  tensor_descriptor.py  tensor_operations_tutorial.py  tensor_view.py  tile_distribution.py  tile_distribution_encoding.py  tile_distribution_tutorial.py  tile_scatter_gather.py  tile_window.py  tile_window_linear.py  tile_window_tutorial.py  tile_window_utils.py  update_tile.py
scripts/: deploy_apps.sh  nginx.conf  stop_apps.sh
tensor_transforms/: __init__.py  analyzer.py  examples.py  extract_descriptors.py  graph_builder.py  parser.py
tests/: __init__.py  conftest.py  test_adaptor_encoding_transforms.py  test_backward_graph.py  test_backward_graph_integration.py  test_buffer_view.py  test_complex_merge_example.py  test_convolution_nested_pattern.py  test_coordinate_movement_tile_ops.py  test_cpp_equivalent_examples.py  test_edge_verification.py  test_extract_descriptors.py  test_four_descriptor_pipeline.py  test_functional_utils.py  test_hierarchical_merge_verification.py  test_load_store_traits.py  test_move_coordinate_comprehensive.py  test_nested_merge_fix.py  test_nested_merge_parsing.py  test_nested_transform_flattening.py  test_partition_simulation.py  test_ps_ys_adaptor_coordinate_movement.py  test_pytensor_integration.py  test_recursive_transforms.py  test_sequence_utils.py  test_shuffle_tile.py  test_space_filling_curve.py  test_static_distributed_tensor.py  test_store_tile.py  test_sweep_tile.py  test_sympy_transforms.py  test_tensor_adaptor.py  test_tensor_coordinate.py  test_tensor_coordinate_movement.py  test_tensor_descriptor.py  test_tensor_transform_examples.py  test_tensor_transform_parser.py  test_tensor_transform_sympy.py  test_tensor_view.py  test_tile_distribution.py  (+12 more)
tile_distribution/: __init__.py  examples.py  parser.py  test_visualization.py  tiler_pedantic.py  visualizer.py
tile_distribution_documentation/: _quarto.yml  custom-theme.scss  diagram-sizing-fixes.css  font-cleanup.js  font_size_test.html  index.qmd  mermaid-include.html
todelete/: adaptor_transformation_app.py  amirconftest.py  complete_sweep_with_tile_window.py  debug_c_plus_plus_analysis.py  debug_coordinate_movement.py  debug_coordinates.py  debug_p_dimensions.py  debug_p_encoding.py  debug_vector_dim.py  debug_warp_mapping.py  debug_y1_coordinate_bug.py  debug_y_dimensions.py  proper_sweep_with_coordinates.py  real_sweep_with_library.py  spans_app.py  sweep_tile_example.py  test_debug_encoding.py  test_debug_tile.py  test_fixed_api.py  test_p_to_x0_mapping.py  test_replication_patterns.py  test_tiler_pedantic.py  thread_coordinate_mapper.py  tiler.py
(+115 files in other folders)
