[tool.poetry]
name = "pythonck"
version = "0.2.0"
description = "Python implementation and tutorials for the Composable Kernel (CK) Tile programming model"
authors = ["CK Development Team"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ROCm/composable_kernel"
repository = "https://github.com/ROCm/composable_kernel"
documentation = "https://github.com/ROCm/composable_kernel/tree/develop/pythonck"
keywords = ["gpu", "hpc", "tensor", "composable-kernel", "rocm", "amd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "pytensor" },
    { include = "tensor_transforms" },
    { include = "tile_distribution" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sympy = "^1.9"
numpy = ">=1.21.0,<3.0.0"
matplotlib = "^3.4.0"
pandas = "^2.0.0"
seaborn = "^0.13.2"
networkx = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
streamlit = "^1.20.0"
jupyter = "^1.1.1"
quarto = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.poetry.extras]
web = ["jupyter", "streamlit", "quarto"]
